(Bug Fix) Bug: Method org.gwt.mosaic.ui.client.table.CachedTableModel$CacheIterator.hasNext() invokes inefficient new Integer(int) constructor; use Integer.valueOf(int) instead